Changed some font-color

--- a/Main.html
+++ b/Main.html
@@ -11,14 +11,14 @@
                 Kigali City Public Bus Live
             </p>
         </div>
-        <div class="bus-route-div">
+        <!-- <div class="bus-route-div">
             <p>
                 BUS No: 305,  KANOMBE - DOWNTOWN
             </p>
-        </div>
+        </div> -->
 
         <div class="bus-stops-div">
-            <div class="bus-stop-div" style="background-color: rgb(8, 89, 165);border-radius: 10px;">
+            <div class="bus-stop-div" style="background-color: rgb(8, 89, 165);border-radius: 10px; border: 2px dotted yellow;">
                 <img src="assets/bus-stoppp.png" />
                 <p>SEGITERI</p>
             </div>
